IMOD History
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
2/1/14: Made installer able to take a .csh file, so it can be used to upgrade
on Windows without Cygwin.

1/31/14: Fixed installer test for 32/64 bit mismatch and added test and
message about libjpeg 6.2 on Ubuntu.

1/30/14: IMOD_4-6-40
1/30/14: Switched to outputting signed bytes by default.  BYTE FILES WILL NO
LONGER BE READABLE BY VERSIONS BEFORE IMOD 4.3.

1/30/14: Fixed execute permission on Autofidseed and added option for passing
options to Imodfindbeads.

1/30/14: In eTomo fixed bugs in the Directive Editor.(Bug# 1721)

1/30/14: In eTomo - Directive Editor, fixed bugs which where causing unchanged
directives to be display in the default mode.(Bug# 1772)

1/30/14: In eTomo - Directive Editor, getting CTF defaults from origcoms.
(Bug# 1715)

1/29/14: IMOD_4-6-39
1/29/14: Changed Newstack floating to truncate images with extreme ranges
instead of scaling them to a different mean/SD.

1/29/14: In eTomo - Coarse Alignment, fixed a problem with graphing edge
errors.(Bug# 1774)

1/29/14: In eTomo improving error handling for an empty fiducial diameter
field.(Bug# 1671)

1/29/14: Fixed problems with autofidseed in eTomo - Fiducial Model Dialog.
(Bug# 1743)

1/29/14: Exposed flgNoReferenceRefinement in eTomo - PEET.(Bug# 1738)

1/28/14: Restored fortran graphics program wrappers to Mac build, lost 1/13.

1/20/14: IMOD_4-6-38
1/20/14: Fixed keypad hot keys in Model View on Mac.

1/18/14: IMOD_4-6-37

1/18/14: Further polishing of Grab with Note, which can now be used to draw
multiple arrows in Zap or Slicer windows.

1/16/14: IMOD_4-6-36
1/16/14: Jane Ding contributed Grab with Note plugin, which takes Slicer or Zap
snapshots with notes added below the image.

1/16/14: Fixed creation of patch tracking com file if mag change searched in
coarse align.

1/16/14: Change eTomo to make it independent of Cygwin.  Fixed a problem with
killing processes on Windows.(Bug# 1716)
